@@ -14,6 +14,10 @@ def rails_4?
   Rails::VERSION::MAJOR.to_s == "4"
 end
 
+def rails_4_1?
+  Rails::VERSION::MAJOR.to_s == "4" && Rails::VERSION::MINOR.to_s == "1"
+end
+
 def ask_wizard(question)
   ask "\033[1m\033[36m" + (@current_recipe || "prompt").rjust(10) + "\033[1m\033[36m" + "  #{question}\033[0m"
 end
