@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.4.25"
+  VERSION = "2.4.26"
 end
